tooling/nargo_cli/tests/snapshots/execution_success/brillig_conditional/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    // Safety: comment added by `nargo expand`
    unsafe {
        assert(4_Field == conditional(x == 1_Field));
    }
}

unconstrained fn conditional(x: bool) -> Field {
    if x {
        4_Field
    } else {
        5_Field
    }
}
